=== HEAD

* Don't modify Model#new? and Model#changed_columns when saving a record until after the after hooks have been run (tamas, jeremyevans)

* Database#quote_identifiers= now affects future schema modification statements, even if it is not used before one of the schema modification statements (jeremyevans)

* Fix literalization of blobs when using the PostreSQL JDBC subadapter (jeremyevans)

* Fix literalization of date and time types when using the MySQL JDBC subadapter (jeremyevans)

* Convert some Java specific types to ruby types on output in the JDBC adapter (jeremyevans)

* Add Database#tables method to JDBC adapter (jeremyevans)

* Add H2 JDBC subadapter (logan_barnett, david_koontz, james_britt, jeremyevans)

* Add identifer_output_method, used for converting identifiers coming out of the database, replacing the lowercase support on some databases (jeremyevans)

* Add identifier_input_method, used for converting identifiers going into the database, replacing upcase_identifiers (jeremyevans)

* Add :allow_missing validation option, useful if the database provides a good default (jeremyevans)

* Fix literalization of SQL::Blobs in DataObjects and JDBC adapter's postgresql subadapters when ruby 1.9 is used (jeremyevans)

* When using standard strings in the postgres adapter with the postgres-pr driver, use custom string escaping to prevent errors (jeremyevans)

* Before hooks now run in reverse order of being added, so later ones are run first (tamas)

* Add Firebird adapter, requires Firebird ruby driver located at http://github.com/wishdev/fb (wishdev)

* Don't clobber the following Symbol instance methods when using ruby 1.9: [], <, <=, >, >= (jeremyevans)

* Quote the table name and the index for PostgreSQL index creation (jeremyevans)

* Add DataObjects adapter, supporting PostgreSQL, MySQL, and SQLite (jeremyevans)
